updates on Array an Scripts api